--- a/wwwroot/bestaand-uitje.html
+++ b/wwwroot/bestaand-uitje.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="nieuw-uitje.html">nieuw uitje</a></li>
+            <li><a href="new-event.html">nieuw uitje</a></li>
             <li><a href="bestaand-uitje.html">bestaand uitje</a></li>
         </ul>
     </nav>
