--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,7 +16,7 @@
                     <a href = "index.html">home</a>
                 </li>
                  <li>
-                    <a href="nieuw-uitje.html">Nieuw Uitje</a>
+                    <a href="new-event.html">Nieuw Uitje</a>
                  </li>
                 <li>
                     <a href="bestaand-uitje.html">Bestaand uitje</a>
@@ -40,6 +40,5 @@
             </p>      
             <img src="dokkie.png">
         </main>
-        <script src="/src/index.ts" type="module"></script>
     </body>
 </html>     
