--- a/wwwroot/new-event.html
+++ b/wwwroot/new-event.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <ul>
             <li><a href="index.html">home</a></li>
-            <li><a href="nieuw-uitje.html">nieuw uitje</a></li>
+            <li><a href="new-event.html">nieuw uitje</a></li>
             <li><a href="bestaand-uitje.html">Bestaand uitje</a></li>
             </ul>
         </nav>
@@ -48,8 +48,6 @@
                 <br>
                 <br>
                 <br>
-
-
                 <button id="submitButton">verzenden</button>
             </fieldset>
             </div>
@@ -58,7 +56,7 @@
         <br>
         <br>
         <img src="split the bill.jpg">
-        <script src="../src/createEvent.ts" type="module"></script>
+        <script src="../src/new-event.ts" type="module"></script>
     </body>
 </html>
 
