latest changes from bjorn

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,20 +6,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">        <title>Dokkie</title>
-        <h1>Welkom bij Dokkie!</h1>
+        <h1>Welcome to Dokkie!</h1>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <nav class = "navbar">
             <ul>
                 <li>
-                    <a href = "index.html">home</a>
+                    <a href = "index.html">Home</a>
                 </li>
                  <li>
-                    <a href="new-event.html">Nieuw Uitje</a>
+                    <a href="create-events.html">New event</a>
                  </li>
                 <li>
-                    <a href="bestaand-uitje.html">Bestaand uitje</a>
+                    <a href="existing-events.html">Existing event</a>
                 </li>
             </ul>
         </nav>
@@ -40,5 +40,6 @@
             </p>      
             <img src="dokkie.png">
         </main>
+        <script src="/src/index.ts" type="module"></script>
     </body>
 </html>     
