update to use grand total

--- a/wwwroot/existing-events.html
+++ b/wwwroot/existing-events.html
@@ -31,9 +31,6 @@
         
                 <p id="eventName">Event name: <strong>Your Event Name Here</strong></p>
                 <p id="amountOfPersons">Amount of people: <strong>Number of People</strong></p>
-                <p id="totalAmount">Total amount: <strong>$Total Amount</strong></p>
-                <p id="tipPercentage">Tip %: <strong>Tip Percentage</strong></p>
-                <p id="totalAmountWithTip">Total amount (with tip %): <strong>$Total with Tip</strong></p>
                 <p id="amountPerPerson">Amount per person: <strong>$Amount Per Person</strong></p>
             </fieldset>
         </div>
@@ -108,7 +105,7 @@
             <div id="overUnderPayments"></div>
             <button id="calculateButton">Calculate Over/Under Payments</button>
 
-    <script src="../src/showExisitingEvent.ts" type="module"></script>
+    <script src="../src/showExistingEvent.ts" type="module"></script>
 </main>
 
 </body>
