add tips support

--- a/wwwroot/existing-events.html
+++ b/wwwroot/existing-events.html
@@ -52,6 +52,11 @@
             <label for="costAmount">Cost:</label>
             <input type="number" id="costAmount" placeholder="fill in amount" />
         </div>
+
+        <div class="cost-management">
+            <label for="tipPercentage">Tip % (optional):</label>
+            <input type="number" id="tipPercentage" placeholder="Enter tip percentage">
+        </div>
     
         <div class="cost-management">
             <label for="costDate">Date:</label>
