add changes to display all events

--- a/wwwroot/create-events.html
+++ b/wwwroot/create-events.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="create-events.html">New event</a></li>
                 <li><a href="existing-events.html">Existing event</a></li>
+                <li><a href="all-events.html">All your events</a></li>
                 </ul>
             </nav>
            
@@ -21,7 +22,7 @@
                 <div id="box1">
                     <br>
                     <br>
-                    <h4>your event</h4>
+                    <h4>Your event</h4>
                     <br>
                     <br>
                 <fieldset>
@@ -42,7 +43,7 @@
                     <br>
 
 
-                    <button id="submitButton">send event </button>
+                    <button id="submitButton">Send event </button>
                 </fieldset>
                 </div>
             </main>
