--- a/wwwroot/existing-events.html
+++ b/wwwroot/existing-events.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="create-events.html">New event</a></li>
             <li><a href="existing-events.html">Existing event </a></li>
+            <li><a href="all-events.html">All your events</a></li>
         </ul>
     </nav>
 
