--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">        <title>Dokkie</title>
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">    
+        <title>Dokkie</title>
         <h1>Welcome to Dokkie!</h1>
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -20,6 +21,9 @@
                  </li>
                 <li>
                     <a href="existing-events.html">Existing event</a>
+                </li>
+                <li>
+                    <a href = "all-events.html">All your events</a>
                 </li>
             </ul>
         </nav>
