--- a/wwwroot/create-events.html
+++ b/wwwroot/create-events.html
@@ -1,58 +1,50 @@
-    <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="style.css">
-            <title>New event</title>
-
-        </head>
-        <body>
-             <h1>Split the bill</h1>
-            <nav class="navbar">
-                <ul>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>New event</title>
+    </head>
+    <body>
+        <h1>Split the bill</h1>
+        <nav class="navbar">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="create-events.html">New event</a></li>
                 <li><a href="existing-events.html">Existing event</a></li>
                 <li><a href="all-events.html">All your events</a></li>
-                </ul>
-            </nav>
-           
-            <main>
-                <div id="box1">
-                    <br>
-                    <br>
-                    <h4>Your event</h4>
-                    <br>
-                    <br>
+            </ul>
+        </nav>
+        <main>
+            <div id="box1">
+                <br>
+                <br>
+                <h4>Your event</h4>
+                <br>
+                <br>
                 <fieldset>
-                    <legend>fill in event details</legend>
-
-                    <label for="eventName">Name event:</label>
-                    <input type="text" id="eventName" placeholder="fill in the name" required/>
+                    <legend>Fill in event details</legend>
+                    <label for="event-name">Name event:</label>
+                    <input type="text" id="event-name" placeholder="Fill in the name" required/>
                     <br> 
-                    <label for="amountOfPersons">amount of people: </label>
-                    <input type="number" id="amountOfPersons" placeholder="Amount of people" required min="1"/>
+                    <label for="mount-of-persons">Amount of people: </label>
+                    <input type="number" id="amount-of-persons" placeholder="Amount of people" required min="1"/>
                     <br><br>
-                    <button id="generateFieldsButton">Generate participant field</button>
-
-                    <!-- placeholder where participant input fields will be generated -->
-                    <div id="participantsContainer"></div>
+                    <button id="generate-fields-button">Generate participant field</button>
+                    <div id="participants-container"></div>
                     <br>
                     <br>
                     <br>
-
-
-                    <button id="submitButton">Send event </button>
+                    <button id="submit-button">Send event </button>
                 </fieldset>
-                </div>
-            </main>
-            <br>
-            <br>
-            <br>
-            
-            <script src="../src/createEvent.ts" type="module"></script>
-        </body>
-    </html>
+            </div>
+        </main>
+        <br>
+        <br>
+        <br>
+        <script src="../src/createEvent.ts" type="module"></script>
+    </body>
+</html>
 
 
