simplify amount of persons

--- a/wwwroot/existing-events.html
+++ b/wwwroot/existing-events.html
@@ -68,14 +68,14 @@
                 <fieldset>
                     <div class="participant-management">
                         <label for="new-participant-name">New participant: </label>
-                        <input type="text" id="new-participant-name" placeholder="fill in name" />
+                        <input type="text" id="new-participant-name" placeholder="Fill in name" />
                     </div>
                     <div class="participant-management">
                         <button id="add-participant-button">Add</button>
                     </div>
                     <div class="participant-management">
                         <label for="remove-participant-name">Delete participant:</label>
-                        <input type="text" id="remove-participant-name" placeholder="fill in name" />
+                        <input type="text" id="remove-participant-name" placeholder="Fill in name" />
                     </div>
                     <div class="participant-management">
                     <button id="remove-participant-button">Delete</button>
