--- a/wwwroot/create-events.html
+++ b/wwwroot/create-events.html
@@ -17,12 +17,8 @@
             </ul>
         </nav>
         <main>
-            <div id="box1">
-                <br>
-                <br>
+            <div id="create-event-container">
                 <h4>Your event</h4>
-                <br>
-                <br>
                 <fieldset>
                     <legend>Fill in event details</legend>
                     <label for="event-name">Name event:</label>
@@ -34,15 +30,10 @@
                     <button id="generate-fields-button">Generate participant field</button>
                     <div id="participants-container"></div>
                     <br>
-                    <br>
-                    <br>
                     <button id="submit-button">Send event </button>
                 </fieldset>
             </div>
         </main>
-        <br>
-        <br>
-        <br>
         <script src="../src/createEvent.ts" type="module"></script>
     </body>
 </html>
