--- a/wwwroot/existing-events.html
+++ b/wwwroot/existing-events.html
@@ -25,7 +25,7 @@
                     <p id="amount-per-person">Amount per person: <strong>$Amount per person</strong></p>
                 </fieldset>
             </div>
-            <div id="box1">
+            <div id="add-cost-container">
                 <h4>Add cost to participant:</h4>    
                 <div class="form-container">
                     <fieldset>
@@ -70,18 +70,17 @@
                         <button id="add-participant-button">Add</button>
                     </div>
                     <div class="participant-management">
-                        <label for="remove-participant-name">Delete participant:</label>
-                        <input type="text" id="remove-participant-name" placeholder="Fill in name" />
+                        <label for="delete-participant-select">Delete participant:</label>
+                        <select id="delete-participant-select"></select>
                     </div>
                     <div class="participant-management">
-                    <button id="remove-participant-button">Delete</button>
+                    <button id="delete-participant-button">Delete</button>
                 </fieldset> 
             </div>
             <div id="over-under-payments-container">
                 <h4>Over or Underpaid</h4>
                 <br>
                 <div id="over-under-payments"></div>
-                <button id="calculate-button">Calculate Over/Under Payments</button>
                 <button id="share-button">Share on WhatsApp</button>
             </div>
         <script src="../src/showExistingEvent.ts" type="module"></script>
