view detailed event from all event list

--- a/wwwroot/all-events.html
+++ b/wwwroot/all-events.html
@@ -25,6 +25,6 @@
         <div id="event-results" class="results-container">
         </div>
     </main>
-    <script src="all-events.js"></script>
+    <script src="../src/allEvents.ts"></script>
 </body>
 </html>
